# ComputationTheory

./: ComputationTheory.cabal  ComputationTheory.opam  dune-project
.github/workflows/: ocaml.yml
ComputationTheory/ComputationTheory/: RegisterMachines.hs
TestComputationTheory/: Main.hs  RegisterMachineTests.hs
lib/: dune  natural.ml  natural.mli  natural_encoding.ml  register_machine.ml  register_machine.mli
src/: dune  natural.ml  natural.mli  natural_encoding.mli  register_machine.ml  register_machine.mli  register_machine_examples.ml  register_machine_examples.mli
test/: dune  test_Natural.ml  test_Natural_encoding.ml  test_Register_machine.ml  test_Register_machine_examples.ml
